# poco-lib-test

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
tst/: CMakeLists.txt
